[project]
name = "ml-assessment"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.43.1,<2.0.0)",
    "torch (==2.2.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "diffusers (>=0.32.2,<0.33.0)",
    "python-pptx (>=1.0.2,<2.0.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "pyngrok (>=7.2.3,<8.0.0)",
    "accelerate (>=1.5.1,<2.0.0)",
    "kaggle (>=1.7.4,<2.0.0)",
    "kagglehub (>=0.3.10,<0.4.0)",
    "torchvision (==0.17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

